--- a/views/posts.pug
+++ b/views/posts.pug
@@ -23,7 +23,7 @@ html(lang="ja")
       p #{post.content}
       p 投稿日時: #{post.createdAt}
       - var isAdmin = (user === 'admin')
-      if admin
+      if isAdmin
         p 投稿者: #{post.postedBy}
       - var isDeletable = (user === post.postedBy || isAdmin)
       if isDeletable
